fix: space between box align

--- a/style.css
+++ b/style.css
@@ -26,17 +26,16 @@ header:hover {
 #container {
   display: flex;
   width: 100%;
-  height: 100vh;
   padding: 0 3rem;
   box-sizing: border-box;
   justify-content: space-between;
-  align-content: space-around;
   flex-wrap: wrap;
 }
 
 #items {
   width: 20vw;
   height: 35vh;
+  margin: 2.5rem 0;
   border-radius: .5rem;
   overflow: hidden;
   box-shadow: 0rem .1rem .3rem #b6b6b6;
